# cpp-site

./: .gitignore  README.md
content/: _index.pl.md  harmonogram.pl.md
content/archive-tasks/: _index.pl.md
content/archive-tasks/l1/2026/: index.pl.md
content/archive-tasks/l2/2025/: index.pl.md
content/archive-tasks/l3/2025/: index.pl.md
content/archive-tasks/l4/2025/: index.pl.md
content/archive-tasks/l5/2025/: index.pl.md
content/lab/l0/: index.pl.md  plan.md
content/lab/l1/: index.pl.md  plan.md
content/lab/l2/: index.pl.md  plan.md
content/lab/l3/: index.pl.md  plan.md
content/lab/l4/: index.pl.md  plan.md
content/lab/l4/solution/src/base32/: CMakeLists.txt  decoder.hpp  encoder.cpp  encoder.hpp
content/lab/l4/solution/tests/: CMakeLists.txt  decoder_test.cpp  encoder_test.cpp
content/lab/l5/: index.pl.md  plan.md
content/lab/l6/: index.pl.md  plan.md
content/lab/l7/: index.pl.md
content/lab/lbis/: index.pl.md  weird_bug.core
content/wyk/: .gitignore
content/wyk/classes/: index.pl.md
content/wyk/memory/: index.pl.md
content/wyk/stl/: index.pl.md
content/wyk/templates/: index.pl.md
content/wyk/tools/: index.pl.md
content/wyk/translation/: index.pl.md
content/wyk/vcalls/: index.pl.md
content/wyk/w1/: index.pl.md
content/wyk/w2/: index.pl.md
content/wyk/w3/: index.pl.md
content/wyk/w4/: index.pl.md
content/wyk/w5/: conversion.cpp  index.pl.md  overloading.cpp
content/wyk/w6/: abstract_button.cpp  dynamic_cast.cpp  index.pl.md  multiple_inheritance.cpp
content/wyk/w7/: index.pl.md
(+129 files in other folders)
